# runelite-quest-voiceover

./: .gitignore  README.md  auto_generate_tourist_trap.py  build.gradle  cli-main.py  generate_kokoro.py  pyproject.toml
src/main/java/com/quest/voiceover/: MessageUtils.java  QuestVoiceoverPlugin.java  SoundEngine.java
src/main/java/com/quest/voiceover/database/: DatabaseVersionManager.java
voiceover_cli/: elevenlabs.py  kokoro.py  wiki_utils.py
